# amazon-bedrock-guardrails-automated-reasoning-checks-demo-and-utilities

./: .env.example  README.md  automated-reasoning-checks-demo-static.py  automated-reasoning-checks-demo-with-bedrock.py  automated-reasoning-checks-demo-with-openai.py  automated-reasoning-checks-demo-with-strands.py  automated_reasoning_test_cases.json  demo.txt  export-automated-reasoning-policy.py  pyproject.toml
dafny/: fib.dfy
docs/: demo.txt
utils/: automated_reasoning_common.py  config.py  pdf_utils.py
